tests/neg-custom-args/captures/scope-extrude-mut.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/scope-extrude-mut.scala:9:8 ------------------------------
9 |    a = a1  // error
  |        ^^
  |        Found:    A^{a1.rd}
  |        Required: A^
  |
  |        where:    ^ refers to a fresh root capability in the type of variable a
  |
  | longer explanation available when compiling with `-explain`
